# StudentLife-Phenotyping

./: .dockerignore  .env.example  .gitignore  BUILD_OPTIMIZATION.md  CONTAINERIZATION_README.md  CURRENT_TASK.md  DOCKER_DEPLOYMENT.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.mlflow  Dockerfile.train  FLOW_VERIFICATION.md  LICENSE  ML_ZOOMCAMP_COMPARISON.md  PRESENTATION_GUIDE.md  README.md  SETUP_GUIDE.md  development_guide.md  docker-compose.yml  extract_paper_text.py  predict.py  pyproject.toml  requirements.txt  run_full_pipeline.ps1  run_pipeline.sh  setup_and_run.sh  test_api.py  train.py  update_docs.sh
catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: PAPER_READING_GUIDE.md  PRESENTATION_GUIDE.md  dataset_reference.md  paper_notes.md  sensing_data_scope.md  studentlife_paper.txt
notebooks/02_eda/: 01_sensor_analysis.ipynb  01_sensor_deep_dive.ipynb  02_participant_quality.ipynb  02_target_analysis.ipynb  03_data_quality.ipynb  03_term_lifecycle.ipynb  04_term_analysis.ipynb  04_term_lifecycle.ipynb  README.md
notebooks/03_preprocessing/: 01_data_cleaning.ipynb  02_time_alignment.ipynb  README.md
notebooks/04_features/: 01_temporal_features.ipynb  02_activity_sleep.ipynb  03_location_features.ipynb  README.md
notebooks/05_modeling/: README.md
notebooks/06_advanced_ml/: README.md
notebooks/07_deep_learning/: README.md
notebooks/08_production/: README.md
reports/results/: lstm_results.txt  sensor_ema_correlation_report.txt  transformer_results.txt
src/: debug_concat.py  mlflow_config.py  verify_phase4.py
src/analysis/: 02_activity_sleep.py  03_location_features.py
src/api/: main.py  schemas.py
src/data/: alignment.py  cleaning.py  create_final_dataset.py  (+10 more)
tests/: test_alignment.py  test_cleaning.py
(+25 files in other folders)
